--- a/README
+++ b/README
@@ -1,1 +1,10 @@
-Files for ENGR 96 class (Underwater Robotics)
+#UNDERWATER ROBOTICS PROJECT
+
+As part of ENGR 96 (Underwater Robotics), I was Project Manager of a four-person team that built an underwater robot from scratch. I created all the 3D designs for the chassis and control box.
+
+Video of completed project:
+https://www.youtube.com/watch?v=jcJNy5CFNGY
+
+CAD and laser cut files for the chassis and control box can be found in the CAD-files branch.
+
+Pictures can be found in the pictures branch.
